# SurfTracker

./: .gitattributes  CMakeLists.txt  README.md  build_Windows.bat  build_linux.sh  build_mac.sh  demo.sh  main.cpp
SurfacePro/: Complex2real.h  Decomrotation.cpp  Decomrotation.h  DecomrotationPro.cpp  DecomrotationPro.h  Real2complex.h  SpYrotation.h  SurfaceFODPro.cpp  SurfaceFODPro.h
Surface_tracking_c++/: CMakeLists.txt  README.md  build_Windows.bat  build_linux.sh  build_mac.sh  demo.bat  demo.sh  demo01.sh  main  main.cpp  main.sh  makefile  test  test.cpp
Surface_tracking_c++/SurfacePro/: Complex2real.cpp  Complex2real.h  Decomrotation.cpp  Decomrotation.h  DecomrotationPro.cpp  DecomrotationPro.h  Real2complex.cpp  Real2complex.h  SpYrotation.cpp  SpYrotation.h  SpZrotation.cpp  SpZrotation.h  SurfaceFODPro.cpp  SurfaceFODPro.h  WignerDmatrix.cpp  WignerDmatrix.h
Surface_tracking_c++/header/: BuildMeshNbrhood.h  InterpFODontoTRI.h  Masktrimesh.h  Ufibertracking.h  load_mat.h  load_mesh.h  math_aux.h  (+9 more)
Surface_tracking_matlab/: BuildMeshNbrhood.m  Complex2real.m  DecomrotationPro.m  InterpFODontoTRI.m  Masktrimesh.m  MeshNeiboringVertices.m  PolyJacobi.m  ReadMe.txt  ReadObjShape.m  ReadTrackVisFile.m  Readme  Real2complex.m  RunUFiberTrackingnew.m  SpYrotationnew.m  SpZrotation.m  SurfaceFODPronew.m  TrackVis2MRTrixTracks.m  Ufibertracking.m  WignerDmatrixnew.m  WriteTrackVisFile.m  WriteTrackVisFile2.m  demo01.m  matrixB.m  rejectsampling.m  rotationMatrix.m  trackingonsufaceparallel.m  traveltrigparallel.m  write_mrtrix_tracks.m
header/: InterpFODontoTRI.h  load_mesh.h  math_aux.h  matrixB.h  read_binary.h  traveltrigparallel.h
jacobiP/: jacobi_polynomial.cpp  jacobi_polynomial.hpp
lsqr/: lsqrBase.h  lsqrDense.cpp  lsqrDense.h
src/: BuildMeshNbrhood.cpp  Ufibertracking.cpp  load_untouched_nii_img.cpp  znzlib.c
(+15 files in other folders)
